compiler/tests/language/negative/oopSurfaceRoleCapability/native/directCallUsesRoleTable.qn
pub badNativeDirectProof() -> bool {
  let artifact = NativeSurfaceArtifact {
    userCall: NativeCallFact {
      name: "HttpCtx.extend.user"
      direct: true
      monomorphized: true
      roleTableDispatch: true
    }
  }

  return artifact.directDispatchValid
}
